gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: homelab-matt.centralus.cloudapp.azure.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: homelab-tls
            namespace: envoy-gateway-system
    - name: https-auth
      protocol: HTTPS
      port: 443
      hostname: auth.seaze.dev
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: authentik-tls
            namespace: envoy-gateway-system
    - name: https-root
      protocol: HTTPS
      port: 443
      hostname: seaze.dev
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: seazedev-tls
            namespace: envoy-gateway-system
    - name: https-blog
      protocol: HTTPS
      port: 443
      hostname: blog.seaze.dev
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: blog-tls
            namespace: envoy-gateway-system
    - name: https-dashboard
      protocol: HTTPS
      port: 443
      hostname: dashboard.seaze.dev
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: dashboard-tls
            namespace: envoy-gateway-system
